syntax = "proto3";

package bot.grpc;

import "model/client.proto";

import "google/protobuf/empty.proto";

option java_package = "com.mawus.core.grpc";
option java_outer_classname = "ClientServiceProto";

service ClientService {

  rpc FindAll(google.protobuf.Empty) returns (AllClientsResponse);

  rpc FindById(FindByIdRequest) returns (ClientResponse);

  rpc Count(google.protobuf.Empty) returns (CountResponse);

  rpc ActiveCount(google.protobuf.Empty) returns (CountResponse);
}

message FindByIdRequest {
  string id = 1;
}

message ClientResponse {
  model.Client client = 1;
}

message AllClientsResponse {
  repeated model.Client clients = 1;
}

message CountResponse {
  int64 count = 1;
}
